Bug 830038 - Add an assertion in Bluetooth*Mangaers, r=gyeh