dom/bluetooth/BluetoothHfpManager.cpp
@@ -1012,6 +1012,8 @@ BluetoothHfpManager::Connect(const nsAString& aDevicePath,
     mHeadsetSocket = nullptr;
   }
 
+  MOZ_ASSERT(!mRunnable);
+
   mRunnable = aRunnable;
   mSocket =
     new BluetoothSocket(this, BluetoothSocketType::RFCOMM, true, true);
